Trade_coin: Trades - Add all rows to fill content - Update html, css and add demo46

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -159,6 +159,7 @@ html {
     background-color: rgb(22, 26, 30);
     z-index: auto;
     position: relative;
+    overflow: hidden;
 }
 .trades-container{
     box-sizing: border-box;
