--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1155,6 +1155,228 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,268.82</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00086</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="marketActivity"></div>
