--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1141,29 +1141,12 @@
                         <div class="market-tbheader">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,546.81</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
-                                </div>
-                            </div>
-                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
-                                <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="market-tbheader" style="margin-top: 0;">
-                            <div class="wrap-item">
-                                <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
-                                </div>
-                            </div>
-                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
-                                <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.01971</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
@@ -1175,29 +1158,12 @@
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-red text-normal">29,546.84</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
-                                </div>
-                            </div>
-                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
-                                <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="market-tbheader" style="margin-top: 0;">
-                            <div class="wrap-item">
-                                <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
-                                </div>
-                            </div>
-                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
-                                <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00069</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
@@ -1209,92 +1175,92 @@
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-red text-normal">29,582.64</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00082</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-red text-normal">29,582.64</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00037</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00926</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-red text-normal">29,582.64</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.01476</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-red text-normal">29,582.64</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.07037</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
@@ -1304,75 +1270,109 @@
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00069</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.01573</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00074</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
                         <div class="market-tbheader" style="margin-top: 0;">
                             <div class="wrap-item">
                                 <div class="item text-normal">
-                                    <div class="text status-green text-normal">29,268.82</div>
+                                    <div class="text status-green text-normal">29,582.65</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal">0.00086</div>
+                                    <div class="text status-normal text-normal">0.00295</div>
                                 </div>
                             </div>
                             <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
-                                    <div class="text status-normal text-normal" >22:56:28</div>
+                                    <div class="text status-normal text-normal" >22:54:40</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,582.65</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00129</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:54:40</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="market-tbheader" style="margin-top: 0;">
+                            <div class="wrap-item">
+                                <div class="item text-normal">
+                                    <div class="text status-green text-normal">29,582.65</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal">0.00069</div>
+                                </div>
+                            </div>
+                            <div class="wrap-item"  style="flex: 5 1 0px;min-width: 50px;justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text status-normal text-normal" >22:54:40</div>
                                 </div>
                             </div>
                         </div>
