--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -730,25 +730,31 @@
 
                 <div class="chart">
                     <div class="chart-header">
-                        <div class="hd-left">
-                            <div class="hd-left-item">Thời gian</div>
-                            <div class="hd-left-item">1s</div>
-                            <div class="hd-left-item">15Phút</div>
-                            <div class="hd-left-item">1h</div>
-                            <div class="hd-left-item">4h</div>
-                            <div class="hd-left-item">1ngày</div>
-                            <div class="hd-left-item">1W</div>
-                            <div class="hd-left-item">
+                        <div class="hd hd-left">
+                            <div class="hd-item">Thời gian</div>
+                            <div class="hd-item">1s</div>
+                            <div class="hd-item">15Phút</div>
+                            <div class="hd-item">1h</div>
+                            <div class="hd-item">4h</div>
+                            <div class="hd-item">1ngày</div>
+                            <div class="hd-item">1W</div>
+                            <div class="hd-item">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="interval-expand-btn css-l27wmy"><path d="M16 9v1.2L12 15l-4-4.8V9h8z" fill="currentColor"></path></svg>
                             </div>
-                            <div class="hd-left-item">
+                            <div class="hd-item">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-9698k2"><path fill-rule="evenodd" clip-rule="evenodd" d="M4 20h3v-6.791l3.767-3.767.967.966 1.767 1.768 6.364-6.364-1.767-1.768-4.596 4.596-.967-.966-1.768-1.768L7 9.673V4H4v16zm16 0H7v-3h13v3zm-6.5-7.823l2.828 2.828h-5.656l2.828-2.828z" fill="currentColor"></path></svg>
                             </div>
-                            <div class="hd-left-item">
+                            <div class="hd-item">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1mln0pu"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.8 3h-3.6v2.027c-.66.17-1.285.431-1.858.77L6.91 4.363 4.363 6.91l1.434 1.433a7.157 7.157 0 00-.77 1.858H3v3.6h2.027c.17.66.431 1.285.77 1.858L4.363 17.09l2.546 2.546 1.433-1.434c.573.339 1.197.6 1.858.77V21h3.6v-2.027a7.157 7.157 0 001.858-.77l1.433 1.434 2.546-2.546-1.434-1.434a7.16 7.16 0 00.77-1.857H21v-3.6h-2.027a7.158 7.158 0 00-.77-1.858l1.434-1.433-2.546-2.546-1.434 1.434a7.156 7.156 0 00-1.857-.77V3zm-4.5 9a2.7 2.7 0 115.4 0 2.7 2.7 0 01-5.4 0z" fill="currentColor"></path></svg>
                             </div>
                         </div>
-                        <div class="hd-right"></div>
+                        <div class="hd hd-right">
+                            <div class="hd-item">Gốc</div>
+                            <div class="hd-item">Trading View</div>
+                            <div class="hd-item">Chi tiết</div>
+                            <div class="hd-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-y4lg06"><path d="M14.121 12l3.44-3.44L21 12V3h-9l3.44 3.44L12 9.878l2.121 2.12zM3 12l3.44 3.44L9.878 12 12 14.12l-3.44 3.44L12 21H3v-9z" fill="currentColor"></path></svg></div>
+                            <div class="hd-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1icskq0"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 11V3h8v8H3zm2-6h4v4H5V5zM3 21v-8h8v8H3zm2-6h4v4H5v-4zM13 3v8h8V3h-8zm6 2h-4v4h4V5zM13 21v-8h8v8h-8zm2-6h4v4h-4v-4z" fill="currentColor"></path></svg></div>
+                        </div>
                     </div>
                 </div>
 
