Trade_coin: Chart - Add status for current item and fix to finish header - Update html, css and add demo51

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -170,8 +170,6 @@ html {
     padding: 4px;
     border-radius: 2px;
 }
-
-
 .chart svg{
     font-size: 20px;
     fill: currentcolor;
@@ -185,6 +183,9 @@ html {
 }
 .hd-right .hd-item{
     margin: 0 0 0 8px;
+}
+.status-orange{
+    color: rgb(240, 185, 11);
 }
 .orderform{
     grid-area: orderform;
