--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -731,12 +731,12 @@
                 <div class="chart">
                     <div class="chart-header">
                         <div class="hd hd-left">
-                            <div class="hd-item">Thời gian</div>
+                            <div class="hd-item">Time</div>
                             <div class="hd-item">1s</div>
-                            <div class="hd-item">15Phút</div>
-                            <div class="hd-item">1h</div>
-                            <div class="hd-item">4h</div>
-                            <div class="hd-item">1ngày</div>
+                            <div class="hd-item">15m</div>
+                            <div class="hd-item">1H</div>
+                            <div class="hd-item">4H</div>
+                            <div class="hd-item status-orange">1D</div>
                             <div class="hd-item">1W</div>
                             <div class="hd-item">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="interval-expand-btn css-l27wmy"><path d="M16 9v1.2L12 15l-4-4.8V9h8z" fill="currentColor"></path></svg>
@@ -749,9 +749,9 @@
                             </div>
                         </div>
                         <div class="hd hd-right">
-                            <div class="hd-item">Gốc</div>
+                            <div class="hd-item status-orange">Original</div>
                             <div class="hd-item">Trading View</div>
-                            <div class="hd-item">Chi tiết</div>
+                            <div class="hd-item">Depth</div>
                             <div class="hd-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-y4lg06"><path d="M14.121 12l3.44-3.44L21 12V3h-9l3.44 3.44L12 9.878l2.121 2.12zM3 12l3.44 3.44L9.878 12 12 14.12l-3.44 3.44L12 21H3v-9z" fill="currentColor"></path></svg></div>
                             <div class="hd-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1icskq0"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 11V3h8v8H3zm2-6h4v4H5V5zM3 21v-8h8v8H3zm2-6h4v4H5v-4zM13 3v8h8V3h-8zm6 2h-4v4h4V5zM13 21v-8h8v8h-8zm2-6h4v4h-4v-4z" fill="currentColor"></path></svg></div>
                         </div>
