--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -141,6 +141,7 @@ html {
     align-items: center;
     justify-content: space-between;
     background-color: rgb(22, 26, 30);
+    border-bottom: 1px solid rgb(37, 41, 48);
 }
 .chart-header .hd{
     display: flex;
