BAB_Token: Update html, css: size_menu_center_below,hinh14...

--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -12,12 +12,12 @@ html {
 }
 
 #product {
-    width: 1350px;
+    width: 100%;
     height: 2083.45px;
 }
 
 #above {
-    width: 1350px;
+    width: 100%;
     height: 64px;
     display: flex;
     background-color: #181A20;
@@ -25,7 +25,7 @@ html {
 }
 
 #center {
-    width: 1350px;
+    width: 100%;
     height: 1365.95px;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@ html {
 }
 
 #below {
-    width: 1350px;
+    width: 100%;
     height: 653.5px;
     display: flex;
     background-color: rgb(24, 26, 32);
@@ -50,7 +50,8 @@ html {
 }
 
 #menu {
-    width: 1318px;
+    width: 100%;
+    padding: 0px 16px;
     display: flex;
     justify-content: space-between;
     align-items: center;
