Academy:Update html,css:menu_add-dropdown-drop_text-dropdown-content, demo_academy_hinh44...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -31,13 +31,22 @@
                     <div id="conten_left">
                         <div class="button">
                             <div class="button_item">
-                                <a href="">
-                                    <svg viewBox="0 0 24 24" role="button" aria-label="Discover Binance ecosystem" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-                                    <path d="M14.048 9.952H9.952V14.048H14.048V9.952ZM14.048 4H9.952V8.085H14.048V4ZM14.048 15.915H9.952V20H14.048V15.915ZM8.085 9.952H4V14.048H8.085V9.952ZM20 4H15.915V8.085H20V4ZM20 15.915H15.915V20H20V15.915ZM8.085 15.915H4V20H8.085V15.915ZM20 9.952H15.915V14.048H20V9.952ZM8.085 4H4V8.085H8.085V4Z"></path>
-                                </svg>
-                                </a>
+                                <lu>
+                                    <li class="dropdown">
+                                        <a href="#" class="drop_text">
+                                            <svg viewBox="0 0 24 24" role="button" aria-label="Discover Binance ecosystem" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                <path d="M14.048 9.952H9.952V14.048H14.048V9.952ZM14.048 4H9.952V8.085H14.048V4ZM14.048 15.915H9.952V20H14.048V15.915ZM8.085 9.952H4V14.048H8.085V9.952ZM20 4H15.915V8.085H20V4ZM20 15.915H15.915V20H20V15.915ZM8.085 15.915H4V20H8.085V15.915ZM20 9.952H15.915V14.048H20V9.952ZM8.085 4H4V8.085H8.085V4Z"></path>
+                                            </svg>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <div>
+                                                <a href="#"></a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </lu>
                             </div>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
                         </div>
                         <div id="item_start">
                             <div id="start_here">
@@ -48,11 +57,21 @@
                         </div>
                         <div class="button">
                             <div class="button_item">
-                                <a href="">
-                                    <p>Articles</p>
-                                </a>
+                                <lu>
+                                    <li class="dropdown">
+                                        <a href="#" class="drop_text">
+                                            <p>Articles</p>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">213</a>
+                                            <a href="#">123</a>
+                                            <a href="#">321</a>
+                                        </div>
+                                    </li>
+                                </lu>
                             </div>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+
                         </div>
                         <div class="button">
                             <div class="button_item">
@@ -70,9 +89,17 @@
                         </div>
                         <div class="button">
                             <div class="button_item">
-                                <a href="">
-                                    <p>Partnership</p>
-                                </a>
+                                <lu>
+                                    <li class="dropdown">
+                                        <a href="" class="drop_text">
+                                            <p>Partnership</p>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <div></div>
+                                        </div>
+                                    </li>
+                                </lu>
                             </div>
                             <i class="fa fa-caret-down" aria-hidden="true"></i>
                         </div>
@@ -84,7 +111,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div id="conten_right">
                     <div id="search">
