--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -136,8 +136,8 @@ body {
 .button_item a svg {
     width: 24px;
     height: 24px;
+    margin: 11.5px 0px;
     color: rgb(224, 224, 224);
-    margin-top: 3px;
 }
 
 .button:hover svg {
@@ -163,6 +163,42 @@ body {
     font-size: 11px;
     margin-bottom: 3px;
     color: rgb(132, 142, 156);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    margin-top: 16px;
+    display: none;
+    z-index: 1;
+    background-color: rgb(30, 35, 41);
+    border-radius: 4px;
+    box-shadow: rgb(0 0 0 / 8%) 0px 0px 20px;
+    position: absolute;
+}
+
+.dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.drop_text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.drop_text i {
+    margin-left: 4px;
 }
 
 #start_here a {
