Academy:Update html,css: menu-dropdown-content-drop_item_right, demo_academy_hinh45...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -40,8 +40,43 @@
                                             <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-content">
-                                            <div>
-                                                <a href="#"></a>
+                                            <div class="dropdown_body">
+                                                <div class="drop_item_right">
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><g><polygon points="10 1.378 4.707 6.673 6.654 8.621 10 5.273 13.348 8.623 15.297 6.675 10 1.378"></polygon><rect x="1.953" y="8.618" width="2.755" height="2.754" transform="translate(-6.09 5.278) rotate(-44.975)"></rect><polygon points="10 14.717 6.653 11.371 4.704 13.315 4.706 13.317 10 18.612 15.296 13.318 15.296 13.316 13.347 11.369 10 14.717"></polygon><rect x="15.293" y="8.618" width="2.754" height="2.755" transform="translate(-2.183 14.723) rotate(-45.025)"></rect><polygon points="11.975 9.995 11.977 9.995 10 8.018 8.54 9.48 8.373 9.647 8.027 9.995 8.024 9.997 8.027 10 10 11.973 11.977 9.997 11.977 9.995 11.975 9.995"></polygon></g></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Exchange</div>
+                                                                <div class="head_1_text">Blockchain and crypto asset exchange</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="15.648 9.64 13.76 7.752 15.648 5.864 17.536 7.752 15.648 9.64"></polygon><polygon points="11.842 2.485 10.772 1.415 11.842 0.345 12.912 1.415 11.842 2.485"></polygon><path d="M11.8,5.368h.715V4.1H7.527V5.368h.714V9.207L2.464,14.985,5.2,17.724H14.8l2.737-2.739L11.8,9.207Zm1.385,9.011-1.307,1.308L10,13.827,8.118,15.708,6.811,14.4,10,11.214Z"></path><polygon points="4.128 5.872 2.711 4.455 4.128 3.04 5.544 4.455 4.128 5.872"></polygon></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Labs</div>
+                                                                <div class="head_1_text">Incubator for top blockchain projects</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1qnv0y0 e1rk5mue0"><path d="M13.54,5.89l-3.5-1.46L6.53,5.89,5.08,9.39,6.53,12.9l3.51,1.45,3.5-1.45L15,9.39Zm-1.55,4.23L9.31,7.43l1.27-1.27,2.69,2.69Z"></path><polygon points="12.478 18.146 10.033 19.222 7.592 18.146 7.592 15.768 12.478 15.768 12.478 18.146"></polygon><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="9.102" y="0.778" width="1.8" height="2.171"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect><rect x="14.239" y="3.17" width="2.171" height="1.8" transform="translate(1.61 12.029) rotate(-45)"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Research</div>
+                                                                <div class="head_1_text">Institutional-grade analysis and reports</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+
                                             </div>
                                         </div>
                                     </li>
@@ -64,9 +99,11 @@
                                             <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-content">
-                                            <a href="#">213</a>
-                                            <a href="#">123</a>
-                                            <a href="#">321</a>
+                                            <div class="dropdown_body">
+                                                <a href="#">213</a>
+                                                <a href="#">123</a>
+                                                <a href="#">321</a>
+                                            </div>
                                         </div>
                                     </li>
                                 </lu>
