--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -170,21 +170,15 @@ body {
     display: inline-block;
 }
 
-.dropdown-content {
-    margin-top: 16px;
-    display: none;
-    z-index: 1;
-    background-color: rgb(30, 35, 41);
-    border-radius: 4px;
-    box-shadow: rgb(0 0 0 / 8%) 0px 0px 20px;
-    position: absolute;
-}
-
 .dropdown-content a {
     color: #000;
-    padding: 12px 16px;
     text-decoration: none;
     display: block;
+}
+
+.dropdown_body {
+    padding: 16px 16px;
+    display: flex;
 }
 
 .dropdown:hover .dropdown-content {
@@ -199,6 +193,57 @@ body {
 
 .drop_text i {
     margin-left: 4px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    inset: 100% auto auto;
+    padding: 16px 0px 0px;
+}
+
+.dropdown_body {
+    background-color: rgb(30, 35, 41);
+    border-radius: 8px;
+    box-shadow: rgb(0 0 0 / 8%) 0px 0px 20px;
+    position: relative;
+}
+
+.drop_clone {
+    box-sizing: border-box;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 16px;
+}
+
+.drop_clone:hover {
+    background-color: rgba(94, 94, 94, 0.164);
+}
+
+.logo_drop {
+    margin: 0px 16px 0px 0px;
+    min-width: 0px;
+}
+
+.head_1 {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.text_drop {
+    white-space: nowrap;
+    color: white;
+    margin: 0px;
+    min-width: 0px;
+}
+
+.head_1_text {
+    margin: 0px;
+    font-size: 14px;
+    color: rgb(132, 142, 156);
 }
 
 #start_here a {
