Academy:Update html,css: menu-dropdown-content-drop_item_left, demo_academy_hinh46...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -67,7 +67,7 @@
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
-                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1qnv0y0 e1rk5mue0"><path d="M13.54,5.89l-3.5-1.46L6.53,5.89,5.08,9.39,6.53,12.9l3.51,1.45,3.5-1.45L15,9.39Zm-1.55,4.23L9.31,7.43l1.27-1.27,2.69,2.69Z"></path><polygon points="12.478 18.146 10.033 19.222 7.592 18.146 7.592 15.768 12.478 15.768 12.478 18.146"></polygon><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="9.102" y="0.778" width="1.8" height="2.171"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect><rect x="14.239" y="3.17" width="2.171" height="1.8" transform="translate(1.61 12.029) rotate(-45)"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect></svg>
+                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M13.54,5.89l-3.5-1.46L6.53,5.89,5.08,9.39,6.53,12.9l3.51,1.45,3.5-1.45L15,9.39Zm-1.55,4.23L9.31,7.43l1.27-1.27,2.69,2.69Z"></path><polygon points="12.478 18.146 10.033 19.222 7.592 18.146 7.592 15.768 12.478 15.768 12.478 18.146"></polygon><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="9.102" y="0.778" width="1.8" height="2.171"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect><rect x="14.239" y="3.17" width="2.171" height="1.8" transform="translate(1.61 12.029) rotate(-45)"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect></svg>
                                                             </div>
                                                             <div class="text_drop">
                                                                 <div class="head_1">Research</div>
@@ -76,7 +76,41 @@
                                                         </div>
                                                     </a>
                                                 </div>
-
+                                                <div class="drop_item_left">
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M11.5 0L8.61 2.88L5.72 0L0 5.71L8.6 14.32L17.22 5.71L11.5 0ZM8.6 10.07L5.01 6.49L6.48 5.01L8.6 7.13L8.61 7.12L10.72 5L12.19 6.48L8.61 10.06L8.6 10.07Z"></path></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">BCF</div>
+                                                                <div class="head_1_text">Blockchain charity foundation</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="5.972 12.709 7.276 14.013 7.276 14.46 7.276 15.381 7.276 16.211 2.689 17.297 3.774 12.709 5.972 12.709"></polygon><path d="M10.99,2.7,8.58,5.12h-3L2.99,7.71l7.82,7.82,1.49,1.5.02.01,2.58-2.59V11.44l2.41-2.42V2.7ZM14.9,9.56H13.07V6.94H10.46V5.12H14.9Z"></path></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Launchpad</div>
+                                                                <div class="head_1_text">Token Launch Platform</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <svg style="color: rgb(92, 146, 255);;" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="16.04 12.7 9.99 17.66 6.62 14.89 3.95 12.7 3.46 4 6.59 4.02 6.62 4 10.02 2.36 13.4 4.02 16.53 4 16.04 12.7"></polygon></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Trust Wallet</div>
+                                                                <div class="head_1_text">Binance's official crypto wallet</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
