--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -142,6 +142,7 @@ html {
 
 .orderform {
     grid-area: orderform;
+    background-color: rgb(30, 32, 38);;
 }
 
 .market {
@@ -1310,4 +1311,37 @@ i {
     height: 100%;
     width: 100%;
     cursor: crosshair;
+}
+
+/* ////////////////////////////////////// */
+.orderform-invite{
+    display: flex;
+    color: rgb(234, 236, 239);
+    background-color: rgb(60, 38, 1);
+    border-bottom: 1px solid rgb(37, 41, 48);
+    border-top-color: rgb(37, 41, 48);
+    border-right-color: rgb(37, 41, 48);
+    border-left-color: rgb(37, 41, 48);
+    box-sizing: border-box;
+    padding: 6px 10px 6px 17px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    justify-content: space-between;
+}
+.orderform-invite .invite-left{
+
+}
+.orderform svg{
+    box-sizing: border-box;
+    margin: 0px 10px 0px 0px;
+    min-width: 0px;
+    font-size: 18px;
+    fill: currentcolor;
+    color: rgb(240, 185, 11);
+    cursor: pointer;
+    flex-shrink: 0;
+    vertical-align: top;
+    width: 1em;
+    height: 1em;
 }
